--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -1,23 +1,31 @@
-{% load static %}
+{% load i18n static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{% static 'base.css' %}">
-    <title>{% block page_title %}{% endblock %}</title>
+    <meta name="viewport" content="width=device-width initial-scale=1 shrink-to-fit=no">
+    <link rel="stylesheet" href="{% static 'posts/css/bootstrap.min.css' %}">
+    {% block extra_css %}{% endblock %}
+    <title>{% block title %}TodoList{% endblock %}</title>
 </head>
+
 <body>
+{#このへんのCSSを後で修正する#}
 <nav>
-    <p class="site-name">Blog</p>
+    <p class="site-name">TodoList</p>
     <ul>
         <li><a href="{% url 'posts:index' %}">Top</a></li>
         <li><a href="{% url 'posts:write' %}">Write</a></li>
     </ul>
 </nav>
 
-<div class="content">
-    {% block content %}{% endblock %}
+<div class="container">
+    {% block content %}
+        {{ content }}
+    {% endblock %}
 </div>
+<script src="{% static 'posts/js/jquery-3.5.1.min.js' %}"></script>
+<script src="{% static 'posts/js/bootstrap.bundle.min.js' %}"></script>
 <hr>
 </body>
 </html>
