--- a/posts/templates/posts/posts_list.html
+++ b/posts/templates/posts/posts_list.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
-{% block page_title %}TaskList{% endblock %}
-{% block title %}post{% endblock %}
+
+{% block title %}タスク一覧{% endblock %}
 
 {% block content %}
     <h4 class="mt-4 border-bottom">タスクの一覧</h4>
-    {#    <a href="{% url 'cms:book_add' %}" class="btn"#}
+    <a href="{% url 'posts:write' %}" class="btn btn-primary btn-sm my-3">追加</a>
+    <a href="{% url 'posts:alldelete' %}" class="btn btn-danger btn-sm my-3">全削除</a>
     <table class="table table-striped table-bordered">
         <thead>
         <tr>
@@ -13,7 +14,7 @@
             <th scope="col">締め切り</th>
             <th scope="col">重要性</th>
             <th scope="col">緊急性</th>
-            <th scope="col">詳細</th>
+            <th scope="col">操作</th>
         </tr>
         </thead>
         <tbody>
@@ -24,10 +25,46 @@
                 <td>{{ post.deadline }}</td>
                 <td>{{ post.importance }}</td>
                 <td>{{ post.urgency }}</td>
-                <td><a href="{% url 'posts:detail' post.pk %}">詳細</a></td>
+                <td>
+                    <a href="{% url 'posts:detail' post.pk %}" class="btn btn-outline-secondary btn-sm">詳細</a>
+                    <a href="{% url 'posts:update' post.pk %}" class="btn btn-outline-primary btn-sm">修正</a>
+                    <a href="{% url 'posts:delete' post.pk %}" class="btn btn-outline-danger btn-sm">削除</a>
+                </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
+
+    {% if is_paginated %}
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                {% if page_obj.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}"
+                                             aria-label="Previous"><span aria-hidden="true">&laquo;</span><span
+                            class="sr-only">Previous</span></a></li>
+                {% else %}
+                    <li class="page-item disabled"><a class="page-link" href="#" aria-label="Previous"><span
+                            aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+                {% endif %}
+                {% for linkpage in page_obj.paginator.page_range %}
+                    {% ifequal linkpage page_obj.number %}
+                        <li class="page-item active"><a class="page-link" href="#">{{ linkpage }}</a></li>
+                    {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{ linkpage }}">{{ linkpage }}</a></li>
+                    {% endifequal %}
+                {% endfor %}
+                {% if page_obj.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}"
+                                             aria-label="Next"><span aria-hidden="true">&raquo;</span><span
+                            class="sr-only">Next</span></a></li>
+                {% else %}
+                    <li class="page-item disabled"><a class="page-link" href="#" aria-label="Next"><span
+                            aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+                {% endif %}
+            </ul>
+        </nav>
+    {% endif %}
+
+    <a href="{% url 'posts:index' %}" class="btn btn-secondary btn-sm">戻る</a>
 {% endblock content %}
 
