--- a/posts/templates/posts/posts_list.html
+++ b/posts/templates/posts/posts_list.html
@@ -5,7 +5,8 @@
 {% block content %}
     <h4 class="mt-4 border-bottom">タスクの一覧</h4>
     <a href="{% url 'posts:write' %}" class="btn btn-primary btn-sm my-3">追加</a>
-    <a href="{% url 'posts:alldelete' %}" class="btn btn-danger btn-sm my-3">全削除</a>
+    <a href="{% url 'posts:alldelete' %}" class="btn btn-danger btn-sm my-3"
+       onclick="return confirm('本当に全タスクを削除しますか？')">全削除</a>
     <table class="table table-striped table-bordered">
         <thead>
         <tr>
@@ -23,8 +24,16 @@
                 <th scope="row">{{ post.id }}</th>
                 <td>{{ post.task }}</td>
                 <td>{{ post.deadline }}</td>
-                <td>{{ post.importance }}</td>
-                <td>{{ post.urgency }}</td>
+                {% if post.importance %}
+                    <td>〇</td>
+                {% else %}
+                    <td>×</td>
+                {% endif %}
+                {% if post.urgency %}
+                    <td>〇</td>
+                {% else %}
+                    <td>×</td>
+                {% endif %}
                 <td>
                     <a href="{% url 'posts:detail' post.pk %}" class="btn btn-outline-secondary btn-sm">詳細</a>
                     <a href="{% url 'posts:update' post.pk %}" class="btn btn-outline-primary btn-sm">修正</a>
