--- a/posts/templates/posts/posts_list.html
+++ b/posts/templates/posts/posts_list.html
@@ -7,6 +7,12 @@
     <a href="{% url 'posts:write' %}" class="btn btn-primary btn-sm my-3">追加</a>
     <a href="{% url 'posts:alldelete' %}" class="btn btn-danger btn-sm my-3"
        onclick="return confirm('本当に全タスクを削除しますか？')">全削除</a>
+    <form action="" method="get">
+        <label>
+            <input name="query" value="{{ request.GET.query }}" type="text">
+        </label>
+        <button type="submit" class="btn btn-secondary btn-sm">検索</button>
+    </form>
     <table class="table table-striped table-bordered">
         <thead>
         <tr>
