タスク分類ページ作成

--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -15,6 +15,7 @@
     <p class="site-name">TodoList</p>
     <ul>
         <li><a href="{% url 'posts:index' %}">Top</a></li>
+        <li><a href="{% url 'posts:figure' %}">表示切替</a></li>
     </ul>
 </nav>
 
