--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -14,8 +14,8 @@
 <nav>
     <p class="site-name">TodoList</p>
     <ul>
-        <li><a href="{% url 'posts:index' %}">Top</a></li>
-        <li><a href="{% url 'posts:figure' %}">表示切替</a></li>
+        <li><a href="{% url 'posts:index' %}">タスク一覧表示</a></li>
+        <li><a href="{% url 'posts:figure' %}">タスク図解表示</a></li>
     </ul>
 </nav>
 
