--- a/posts/templates/posts/posts_figurelist.html
+++ b/posts/templates/posts/posts_figurelist.html
@@ -23,7 +23,9 @@
                         {% for post in figure_list %}
                             {% if post.importance == False and post.urgency == True %}
                                 <tr>
-                                    <td style="width: auto; border: none">{{ post.task }}</td>
+                                    <td style="width: auto; border: none">
+                                        <a href="{% url 'posts:detail' post.pk %}">{{ post.task }}</a>
+                                    </td>
                                 </tr>
                             {% endif %}
                         {% endfor %}
@@ -35,14 +37,16 @@
                 <table class="table" style="border-collapse: collapse;">
                     <thead class="thead-light">
                     <tr>
-                        <th style="width: auto">誰かに任せる</th>
+                        <th style="width: auto">すぐにやる　　　</th>
                     </tr>
                     </thead>
                     <tbody style="display: block; overflow-y: scroll; height: 200px">
                     {% for post in figure_list %}
                         {% if post.importance == True and post.urgency == True %}
                             <tr>
-                                <td style="width: auto; border: none">{{ post.task }}</td>
+                                <td style="width: auto; border: none">
+                                    <a href="{% url 'posts:detail' post.pk %}">{{ post.task }}</a>
+                                </td>
                             </tr>
                         {% endif %}
                     {% endfor %}
@@ -55,14 +59,16 @@
                 <table class="table" style="border-collapse: collapse;">
                     <thead class="thead-light">
                     <tr>
-                        <th style="width: auto">誰かに任せる</th>
+                        <th style="width: auto">後でやる</th>
                     </tr>
                     </thead>
                     <tbody style="display: block; overflow-y: scroll; height: 200px">
                     {% for post in figure_list %}
                         {% if post.importance == False and post.urgency == False %}
                             <tr>
-                                <td style="width: auto; border: none">{{ post.task }}</td>
+                                <td style="width: auto; border: none">
+                                    <a href="{% url 'posts:detail' post.pk %}">{{ post.task }}</a>
+                                </td>
                             </tr>
                         {% endif %}
                     {% endfor %}
@@ -73,14 +79,16 @@
                 <table class="table" style="border-collapse: collapse;">
                     <thead class="thead-light">
                     <tr>
-                        <th style="width: auto">誰かに任せる</th>
+                        <th style="width: auto">いつやるか決める　　　</th>
                     </tr>
                     </thead>
                     <tbody style="display: block; overflow-y: scroll; height: 200px">
                     {% for post in figure_list %}
                         {% if post.importance == True and post.urgency == False %}
                             <tr>
-                                <td style="width: auto; border: none">{{ post.task }}</td>
+                                <td style="width: auto; border: none">
+                                    <a href="{% url 'posts:detail' post.pk %}">{{ post.task }}</a>
+                                </td>
                             </tr>
                         {% endif %}
                     {% endfor %}
