--- a/posts/templates/posts/posts_list.html
+++ b/posts/templates/posts/posts_list.html
@@ -3,7 +3,7 @@
 {% block title %}タスク一覧{% endblock %}
 
 {% block content %}
-    <h4 class="mt-4 border-bottom">タスクの一覧</h4>
+    <h4 class="mt-4 border-bottom">タスク一覧</h4>
     <a href="{% url 'posts:write' %}" class="btn btn-primary btn-sm my-3">追加</a>
     <a href="{% url 'posts:alldelete' %}" class="btn btn-danger btn-sm my-3"
        onclick="return confirm('本当に全タスクを削除しますか？')">全削除</a>
