--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1 shrink-to-fit=no">
     <link rel="stylesheet" href="{% static 'posts/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'figure.css' %}">
     {% block extra_css %}{% endblock %}
     <title>{% block title %}TodoList{% endblock %}</title>
 </head>
