--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -5,20 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1 shrink-to-fit=no">
     <link rel="stylesheet" href="{% static 'posts/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'base.css' %}">
     <link rel="stylesheet" href="{% static 'figure.css' %}">
     {% block extra_css %}{% endblock %}
     <title>{% block title %}TodoList{% endblock %}</title>
 </head>
 
 <body>
-{#このへんのCSSを後で修正する#}
-<nav>
-    <p class="site-name">TodoList</p>
-    <ul>
-        <li><a href="{% url 'posts:index' %}">タスク一覧表示</a></li>
-        <li><a href="{% url 'posts:figure' %}">タスク図解表示</a></li>
-    </ul>
-</nav>
+<header>
+    <h1>
+        <a href="{% url 'posts:index' %}">タスク管理ツール</a>
+    </h1>
+    <nav class="pc-nav">
+        <ul class="header">
+            <li class="nav"><a href="{% url 'posts:index' %}">タスク一覧表示</a></li>
+            <li class="nav"><a href="{% url 'posts:figure' %}">タスク図解表示</a></li>
+        </ul>
+    </nav>
+</header>
+
 
 <div class="container">
     {% block content %}
