--- a/static/base.css
+++ b/static/base.css
@@ -2,44 +2,42 @@ html, body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-body, h1, hr {
-    margin: 0px;
+body {
+    margin-top: 80px;
+}
+
+header {
+    background-color: #80bdff;
+    width: 100%;
+    padding: 30px 4% 10px;
+    position: fixed;
+    top: 0;
+    display: flex;
+    align-items: center;
+}
+
+h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
 }
 
 a {
-    color: #e8e8e8;
+    text-decoration: none;
+    color: #4b4b4b;
 }
 
-nav p {
-    margin: 0px;
-    font-size: 30px;
+.header {
+    list-style: none;
+    margin: 0;
+    display: flex;
+}
+
+.nav {
+    margin: 0 0 0 15px;
+    font-size: 14px;
 }
 
 nav {
-    padding: 10px 10px;
-    color: #e8e8e8;
-    background-color: #41a888;
-}
-
-nav .site-name {
-    display: inline-block;
-}
-
-nav ul {
-    margin: 0px;
-    padding: 0px;
-    float: right;
-}
-
-nav ul li {
-    padding: 10px;
-    display: inline-block;
-}
-
-.title {
-    margin: 21px 50px;
-}
-
-.content {
-    margin: 20px 50px;
+    margin: 0 0 0 auto;
 }
