--- a/posts/templates/posts/posts_delete.html
+++ b/posts/templates/posts/posts_delete.html
@@ -7,6 +7,6 @@
     <form method="post" action="{% url 'posts:delete' posts.pk %}">
         {% csrf_token %}
         <p>タスク名：{{ posts.task }}を削除しますか？</p>
-        <button type="submit" class="button">削除</button>
+        <button type="submit" class="btn btn-danger">削除</button>
     </form>
 {% endblock %}
