--- a/posts/templates/posts/posts_update.html
+++ b/posts/templates/posts/posts_update.html
@@ -7,6 +7,6 @@
     <form method="post" action="{% url 'posts:update' posts.pk %}">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="button">編集</button>
+        <button type="submit" class="btn btn-secondary box-flex">編集</button>
     </form>
 {% endblock %}
