--- a/posts/templates/posts/write.html
+++ b/posts/templates/posts/write.html
@@ -7,6 +7,6 @@
     <form method="post" action="{% url 'posts:write' %}">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="button">投稿</button>
+        <button type="submit" class="btn btn-secondary btn-sm">投稿</button>
     </form>
 {% endblock %}
